<resources>
    <string name="app_name">BKara</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tab names in SongsFragment -->
    <string name="frag_songs_tab_all">ALL</string>
    <string name="frag_songs_tab_hot">HOT</string>
    <string name="frag_songs_tab_new">NEW</string>
    <string name="frag_songs_tab_search">SEARCH</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_re_password">Retype password</string>
    <string name="bkara_album_avatar">BkaraAvatarAlbum</string>
    <string name="press_twice_exit_app_msg">Please click BACK again to exit</string>
    <string name="network_error">Network error !!!</string>
    <string name="user_existed_error">User is already existed !</string>
    <string name="user_not_existed_error">User not found . Please try again !</string>
    <string name="sign_up_success_msg">"Sign up successfully "</string>

    <!-- Google cloud messaging key -->
    <string name="gcm_senderId">789130506501</string>

    <string name="country_prompt">Choose a country</string>
    <string-array name="countries_array">
        <item>Viet Nam</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Other</item>
    </string-array>

</resources>
